feat: guardrails travel from a library into the projects that depend on it
An agent working in an application reads that application's CLAUDE.md, not the
one belonging to a dependency. So a constraint the library's author knows about
("never construct a raw Cipher, go through the factory") is invisible at exactly
the moment it matters, and the agent reaches for the raw API because nothing in
its context said not to.

A library can now declare guardrails on a package, and any consuming project
that opts in renders them into its own AI configuration under "Inherited
Guardrails" (the six safety buckets) and "Inherited Context" (everything else),
after everything the project says about itself. That ordering is the whole
precedence model: the output is prose an agent reads, not a ruleset a compiler
applies, so a library cannot outrank the application. Every rule names the
artifact it came from, because a dependency is contributing text an agent will
act on and the reader has to see whose text it is.

Both halves are file-presence opt-ins: .vibetags-manifest to publish,
.vibetags-transitive to consume. Neither exists by default, and example/ and
example-multimodule-indexed/ regenerate byte-for-byte against the previous
release, so nothing changes for anyone who does not ask for it.

Three findings shaped the design, measured against javac 26 rather than assumed:

- A manifest under META-INF/ cannot be read by an annotation processor at all.
  javac's CLASS_PATH location skips archive directories whose names are not
  valid package identifiers: Filer.getResource throws FileNotFoundException with
  the JAR provably on the classpath, and javac's own file manager lists zero
  entries there even with --add-exports granted. Manifests therefore live at
  vibetags/manifests/<package>.json, and the e2e test repacks a fixture JAR
  under META-INF/ to assert the conventional location stays broken.
- There is no supported way to enumerate the compile classpath.
  ClassLoader.getResou